src/css/main.css
@font-face {
  font-family: "Lato";
  font-style: italic;
  font-weight: 300;
  src: url("../fonts/Lato/Lato-LightItalic.ttf");
}

@font-face {
  font-family: "Lato";
  font-style: italic;
  font-weight: 700;
  src: url("../fonts/Lato/Lato-BoldItalic.ttf");
}

@font-face {
  font-family: "Lato";
  font-style: normal;
  font-weight: 300;
  src: url("../fonts/Lato/Lato-Light.ttf");
}

@font-face {
  font-family: "Lato";
  font-style: normal;
  font-weight: 700;
  src: url("../fonts/Lato/Lato-Bold.ttf");
}

@font-face {
  font-family: "Ubuntu Mono";
  font-style: italic;
  font-weight: 400;
  src: url("../fonts/Ubuntu_Mono/UbuntuMono-Italic.ttf");
}

@font-face {
  font-family: "Ubuntu Mono";
  font-style: italic;
  font-weight: 700;
  src: url("../fonts/Ubuntu_Mono/UbuntuMono-BoldItalic.ttf");
}

@font-face {
  font-family: "Ubuntu Mono";
  font-style: normal;
  font-weight: 400;
  src: url("../fonts/Ubuntu_Mono/UbuntuMono-Regular.ttf");
}

@font-face {
  font-family: "Ubuntu Mono";
  font-style: normal;
  font-weight: 700;
  src: url("../fonts/Ubuntu_Mono/UbuntuMono-Bold.ttf");
}

.remark-slide {
  font-family: Lato, sans-serif;
}

.remark-code {
  border-radius: 4px;
  border: 1px solid #cccccc;
  font-family: "Ubuntu Mono", monospace;
  font-size: 15px;
  line-height: 1.1;
  letter-spacing: 0;
}

.remark-inline-code {
  font-family: "Ubuntu Mono", monospace;
  background: #f0f0f0;
  border-radius: 4px;
}

.remark-slide-container:nth-of-type(1) .remark-slide-content {
  background-color: rgb(0, 55, 103);
  color: white;
}

.remark-slide-content {
  background-color: white;
}

.remark-slide-container:nth-of-type(1) .logo--full {
  display: block;
  margin: auto;
  width: 250px;
  padding-top: 70px;
}

.remark-slide-container:nth-of-type(1) h1 {
  text-align: center;
  font-weight: normal;
  font-size: 40px;
  padding-top: 50px;
}

.remark-slide-container:nth-of-type(1) h2 {
  text-align: center;
  font-weight: normal;
  font-size: 30px;
}

.remark-slide-container:nth-of-type(1) p {
  text-align: center;
  font-size: 20px;
}

.remark-slide-container:nth-of-type(1) .remark-slide-number {
  display: none;
}

.logo--full {
  display: none;
}

.remark-slide-container:nth-of-type(1) .logo--horizontal {
  display: none;
}

.logo--horizontal {
  display: block;
  width: 200px;
  flex-shrink: 0;
}

.remark-slide-container:nth-of-type(n + 2) .slide-header {
  display: flex;
  align-items: flex-start;
  gap: 1.2rem;
  margin-left: -80px;
}

.remark-slide-container:nth-of-type(n + 2) .slide-header .logo--horizontal {
  margin-top: 0.1em;
}

.remark-slide-container:nth-of-type(n + 2) h3 {
  font-size: 28px;
  color: rgb(0, 55, 103);
  margin-top: 0;
}

.remark-slide-container:nth-of-type(n + 2) h2 {
  font-size: 28px;
  color: rgb(0, 55, 103);
  margin-top: 0;
}

.remark-slide-container:nth-of-type(n + 2) .slide-header h3,
.remark-slide-container:nth-of-type(n + 2) .slide-header h2 {
  flex: 1;
  min-width: 0;
}

.remark-slide-container:nth-of-type(n + 2) .remark-slide-content {
  position: relative;
  display: flex;
  flex-direction: column;
  min-height: 100%;
  box-sizing: border-box;
}

.remark-slide-container:nth-of-type(n + 2) .slide-body {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  max-width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  box-sizing: border-box;
  padding: 3em 4em 2em 4em;
}

.remark-slide-container:nth-of-type(n + 2) .slide-body-content {
  height: 100%;
  box-sizing: border-box;
  text-align: justify;
}

.remark-slide-container:nth-of-type(n + 2) .slide-footnotes {
  position: absolute;
  right: 6em;
  bottom: 2.5em;
  left: 6em;
  border-top: 1px solid #888;
  padding-top: 0.35em;
  font-size: 0.62em;
  line-height: 1.25;
}

.remark-slide-container:nth-of-type(n + 2) .slide-footnotes ol {
  margin: 0;
  padding-left: 1.45em;
}

.remark-slide-container:nth-of-type(n + 2) .slide-footnotes li {
  margin: 0.12em 0;
}

.remark-slide-container:nth-of-type(n + 2) .footnote-ref {
  font-size: 0.68em;
  vertical-align: super;
}

.remark-slide-container:nth-of-type(n + 2)
  .remark-slide-content.section-slide
  .slide-body {
  padding: 0 4em;
}

.remark-slide-container:nth-of-type(n + 2)
  .remark-slide-content.section-slide
  .slide-body-content {
  display: flex;
  align-items: center;
  justify-content: center;
}

.section {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.section > h2 {
  font-size: 60px !important;
  left: 0px !important;
  text-align: center;
  line-height: 1.15;
}

.end-slide {
  background-color: rgb(0, 55, 103) !important;
}

.end-slide .remark-slide-number {
  display: none;
}

.end-slide .slide-body-content,
.end-slide-logo-wrapper {
  height: 100%;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

figure {
  text-align: center;
}

.remark-slide-container:nth-of-type(n + 2)
  .slide-body-content
  figure.auto-image {
  margin: 0.5em auto 0;
  text-align: center;
}

.remark-slide-container:nth-of-type(n + 2) .slide-body-content .auto-image-row {
  display: flex;
  gap: 1rem;
  justify-content: center;
  align-items: flex-start;
}

.remark-slide-container:nth-of-type(n + 2)
  .slide-body-content
  .auto-image-row
  figure.auto-image {
  flex: 1 1 0;
  margin: 0.5em 0 0;
}

.remark-slide-container:nth-of-type(n + 2)
  .slide-body-content
  figure.auto-image
  img {
  display: block;
  width: auto;
  height: auto;
  max-width: 92%;
  max-height: 320px;
  margin: 0 auto;
  object-fit: contain;
}

.remark-slide-container:nth-of-type(n + 2)
  .slide-body-content
  figure.auto-image
  figcaption {
  margin-top: 0.35em;
  font-size: 0.72em;
  font-style: italic;
  line-height: 1.2;
}

figcaption {
  font-style: italic;
}

a {
  text-decoration: none;
  color: rgb(0, 55, 103);
}

a:visited {
  text-decoration: none;
  color: rgb(0, 55, 103);
}

table tr:nth-child(even) {
  background: #ededed;
}

table thead th {
  background: #ededed;
  vertical-align: center;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

@page {
  size: 1210px 681px;
  margin: 0;
}

@media print {
  .remark-slide-scaler {
    width: 100% !important;
    height: 100% !important;
    transform: scale(1) !important;
    top: 0 !important;
    left: 0 !important;
  }
}

